--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,10 +3,10 @@
         <h1>BLOG</h1>
     </div>
     <ul>
-        <li><a routerLink="">Home</a></li>
-        <li><a routerLink="trending">Trending</a></li>
-        <li><a routerLink="feed">Feed</a></li>
-        <li><a routerLink="profile">Profile</a></li>
+        <li routerLink=""><a>Home</a></li>
+        <li routerLink="trending"><a>Trending</a></li>
+        <li routerLink="feed"><a>Feed</a></li>
+        <li routerLink="profile"><a>Profile</a></li>
     </ul>
     <div class="space">
         <a routerLink="sign-in"><button>Sign In</button></a>
