--- a/src/app/trending/trending.component.html
+++ b/src/app/trending/trending.component.html
@@ -1,1 +1,67 @@
-<h1>Trending</h1>
+<div class="heading">
+    <h1>Trending</h1>
+</div>
+<div class="main">
+    <div class="blogs">
+        <!-- Blog -->
+        <div class="blog">
+            <img src="../assets/images/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
+            <div class="blog-content">
+                <div class="profile">
+                    <img src="../assets/images/profile-1.jpg" alt="" class="icon">
+                    <h4>Jake Moreira</h4>
+                </div>
+                <h3>Lorem ipsum</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum convallis vel nulla nec ullamcorper. Curabitur interdum iaculis.</p>
+                <button>Read More</button>
+            </div>
+            <hr>
+        </div>
+        <!-- x Blog x -->
+        <!-- Blog -->
+        <div class="blog">
+            <img src="../assets/images/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
+            <div class="blog-content">
+                <div class="profile">
+                    <img src="../assets/images/profile-2.jpg" alt="" class="icon">
+                    <h4>Perry Davies</h4>
+                </div>
+                <h3>Lorem ipsum</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla velit, ultrices nec gravida ac, placerat in sapien. Suspendisse elementum velit orci, at commodo neque ornare a. Integer placerat ac nulla et eleifend.</p>
+                <button>Read More</button>
+            </div>
+            <hr>
+        </div>
+        <!-- x Blog x -->
+        <!-- Blog -->
+        <div class="blog">
+            <img src="../assets/images/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
+            <div class="blog-content">
+                <div class="profile">
+                    <img src="../assets/images/profile-3.jpg" alt="" class="icon">
+                    <h4>Christy Schaner</h4>
+                </div>
+                <h3>Lorem ipsum</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet ut est non scelerisque. Curabitur et eleifend ipsum, ut imperdiet felis. Fusce tincidunt ante a est hendrerit volutpat.</p>
+                <button>Read More</button>
+            </div>
+            <hr>
+        </div>
+        <!-- x Blog x -->
+        <!-- Blog -->
+        <div class="blog">
+            <img src="../assets/images/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
+            <div class="blog-content">
+                <div class="profile">
+                    <img src="../assets/images/profile-4.jpg" alt="" class="icon">
+                    <h4>Mason Conroe</h4>
+                </div>
+                <h3>Lorem ipsum</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem tellus, vestibulum ac tristique tempor, porttitor id libero. Sed in lacus egestas, finibus tellus a, ultrices justo. </p>
+                <button>Read More</button>
+            </div>
+            <hr>
+        </div>
+        <!-- x Blog x -->
+    </div>
+</div>
