--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,30 @@ html {
     font-family: 'Montserrat', sans-serif !important;
 }
 
+:root {
+    --accent-blue: #008cff;
+}
+
 body {
     padding: 0;
     margin: 0;
+}
+
+button {
+    border: 3px solid var(--accent-blue);
+    border-radius: 16px;
+    text-transform: uppercase;
+    padding: 10px 28px;
+    font-family: 'Montserrat', sans-serif !important;
+    font-weight: bold;
+    font-size: 16px;
+    background-color: var(--accent-blue);
+    color: white;
+    transition: all 250ms;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: white;
+    color: var(--accent-blue);
 }
