--- a/src/app/trending/trending.component.html
+++ b/src/app/trending/trending.component.html
@@ -5,10 +5,10 @@
     <div class="blogs">
         <!-- Blog -->
         <div class="blog">
-            <img src="../assets/images/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
+            <img src="assets/images/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
             <div class="blog-content">
                 <div class="profile">
-                    <img src="../assets/images/profile-1.jpg" alt="" class="icon">
+                    <img src="assets/images/profile-1.jpg" alt="" class="icon">
                     <h4>Jake Moreira</h4>
                 </div>
                 <h3>Lorem ipsum</h3>
@@ -20,10 +20,10 @@
         <!-- x Blog x -->
         <!-- Blog -->
         <div class="blog">
-            <img src="../assets/images/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
+            <img src="assets/images/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
             <div class="blog-content">
                 <div class="profile">
-                    <img src="../assets/images/profile-2.jpg" alt="" class="icon">
+                    <img src="assets/images/profile-2.jpg" alt="" class="icon">
                     <h4>Perry Davies</h4>
                 </div>
                 <h3>Lorem ipsum</h3>
@@ -35,10 +35,10 @@
         <!-- x Blog x -->
         <!-- Blog -->
         <div class="blog">
-            <img src="../assets/images/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
+            <img src="assets/images/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
             <div class="blog-content">
                 <div class="profile">
-                    <img src="../assets/images/profile-3.jpg" alt="" class="icon">
+                    <img src="assets/images/profile-3.jpg" alt="" class="icon">
                     <h4>Christy Schaner</h4>
                 </div>
                 <h3>Lorem ipsum</h3>
@@ -50,10 +50,10 @@
         <!-- x Blog x -->
         <!-- Blog -->
         <div class="blog">
-            <img src="../assets/images/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
+            <img src="assets/images/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
             <div class="blog-content">
                 <div class="profile">
-                    <img src="../assets/images/profile-4.jpg" alt="" class="icon">
+                    <img src="assets/images/profile-4.jpg" alt="" class="icon">
                     <h4>Mason Conroe</h4>
                 </div>
                 <h3>Lorem ipsum</h3>
