Updating routing + 404 component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,10 +3,10 @@
         <h1>BLOG</h1>
     </div>
     <ul>
-        <li routerLink=""><a>Home</a></li>
-        <li routerLink="trending"><a>Trending</a></li>
-        <li routerLink="feed"><a>Feed</a></li>
-        <li routerLink="profile"><a>Profile</a></li>
+        <li routerLink="" routerLinkActive="active"><a>Home</a></li>
+        <li routerLink="trending" routerLinkActive="active"><a>Trending</a></li>
+        <li routerLink="feed" routerLinkActive="active"><a>Feed</a></li>
+        <li routerLink="profile" routerLinkActive="active"><a>Profile</a></li>
     </ul>
     <div class="space">
         <a routerLink="sign-in"><button>Sign In</button></a>
