--- a/src/app/trending/trending.component.html
+++ b/src/app/trending/trending.component.html
@@ -11,41 +11,64 @@
                     <img src="assets/profile-1.jpg" alt="" class="icon">
                     <h4>Jake Moreira</h4>
                 </div>
-                <h3>Lorem ipsum</h3>
+                <h4>Lorem ipsum</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum convallis vel nulla nec ullamcorper. Curabitur interdum iaculis.</p>
-                <button>Read More</button>
             </div>
-            <hr>
+            <div class="blog-meta">
+                <p>6 min</p>
+                <i class='bx bx-heart'></i>
+            </div>
         </div>
         <!-- x Blog x -->
         <!-- Blog -->
         <div class="blog">
-            <img src="assets/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
+            <img src="assets/blog-cover-2.jpg" alt="Blog Cover Image" class="blog-img">
             <div class="blog-content">
                 <div class="profile">
                     <img src="assets/profile-2.jpg" alt="" class="icon">
                     <h4>Perry Davies</h4>
                 </div>
-                <h3>Lorem ipsum</h3>
+                <h4>Lorem ipsum</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla velit, ultrices nec gravida ac, placerat in sapien. Suspendisse elementum velit orci, at commodo neque ornare a. Integer placerat ac nulla et eleifend.</p>
-                <button>Read More</button>
             </div>
-            <hr>
+            <div class="blog-meta">
+                <p>11 min</p>
+                <i class='bx bx-heart'></i>
+            </div>
         </div>
         <!-- x Blog x -->
         <!-- Blog -->
         <div class="blog">
-            <img src="assets/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
+            <img src="assets/blog-cover-3.jpg" alt="Blog Cover Image" class="blog-img">
             <div class="blog-content">
                 <div class="profile">
                     <img src="assets/profile-3.jpg" alt="" class="icon">
                     <h4>Christy Schaner</h4>
                 </div>
-                <h3>Lorem ipsum</h3>
+                <h4>Lorem ipsum</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet ut est non scelerisque. Curabitur et eleifend ipsum, ut imperdiet felis. Fusce tincidunt ante a est hendrerit volutpat.</p>
-                <button>Read More</button>
             </div>
-            <hr>
+            <div class="blog-meta">
+                <p>4 min</p>
+                <i class='bx bx-heart'></i>
+            </div>
+        </div>
+        <!-- x Blog x -->
+        <!-- Blog -->
+        <div class="blog">
+            <img src="assets/blog-cover-4.jpg" alt="Blog Cover Image" class="blog-img">
+            <div class="blog-content">
+                <div class="profile">
+                    <img src="assets/profile-4.jpg" alt="" class="icon">
+                    <h4>Mason Conroe</h4>
+                </div>
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem tellus, vestibulum ac tristique tempor, porttitor id libero. Sed in lacus egestas, finibus tellus a, ultrices justo. </p>
+            </div>
+            <div class="blog-meta">
+                <p>5 min</p>
+                <i class='bx bx-heart'></i>
+            </div>
         </div>
         <!-- x Blog x -->
         <!-- Blog -->
@@ -53,14 +76,67 @@
             <img src="assets/blog-cover-1.jpg" alt="Blog Cover Image" class="blog-img">
             <div class="blog-content">
                 <div class="profile">
+                    <img src="assets/profile-1.jpg" alt="" class="icon">
+                    <h4>Jake Moreira</h4>
+                </div>
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum convallis vel nulla nec ullamcorper. Curabitur interdum iaculis.</p>
+            </div>
+            <div class="blog-meta">
+                <p>13 min</p>
+                <i class='bx bx-heart'></i>
+            </div>
+        </div>
+        <!-- x Blog x -->
+        <!-- Blog -->
+        <div class="blog">
+            <img src="assets/blog-cover-2.jpg" alt="Blog Cover Image" class="blog-img">
+            <div class="blog-content">
+                <div class="profile">
+                    <img src="assets/profile-2.jpg" alt="" class="icon">
+                    <h4>Perry Davies</h4>
+                </div>
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla velit, ultrices nec gravida ac, placerat in sapien. Suspendisse elementum velit orci, at commodo neque ornare a. Integer placerat ac nulla et eleifend.</p>
+            </div>
+            <div class="blog-meta">
+                <p>8 min</p>
+                <i class='bx bx-heart'></i>
+            </div>
+        </div>
+        <!-- x Blog x -->
+        <!-- Blog -->
+        <div class="blog">
+            <img src="assets/blog-cover-3.jpg" alt="Blog Cover Image" class="blog-img">
+            <div class="blog-content">
+                <div class="profile">
+                    <img src="assets/profile-3.jpg" alt="" class="icon">
+                    <h4>Christy Schaner</h4>
+                </div>
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet ut est non scelerisque. Curabitur et eleifend ipsum, ut imperdiet felis. Fusce tincidunt ante a est hendrerit volutpat.</p>
+            </div>
+            <div class="blog-meta">
+                <p>12 min</p>
+                <i class='bx bx-heart'></i>
+            </div>
+        </div>
+        <!-- x Blog x -->
+        <!-- Blog -->
+        <div class="blog">
+            <img src="assets/blog-cover-4.jpg" alt="Blog Cover Image" class="blog-img">
+            <div class="blog-content">
+                <div class="profile">
                     <img src="assets/profile-4.jpg" alt="" class="icon">
                     <h4>Mason Conroe</h4>
                 </div>
-                <h3>Lorem ipsum</h3>
+                <h4>Lorem ipsum</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem tellus, vestibulum ac tristique tempor, porttitor id libero. Sed in lacus egestas, finibus tellus a, ultrices justo. </p>
-                <button>Read More</button>
             </div>
-            <hr>
+            <div class="blog-meta">
+                <p>6 min</p>
+                <i class='bx bx-heart'></i>
+            </div>
         </div>
         <!-- x Blog x -->
     </div>
