--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,8 +1,13 @@
+header {
+    display: flex;
+    flex-direction: column;
+}
+
 nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    height: 75px;
+    height: 50px;
     width: 100vw;
 }
 
@@ -29,7 +34,7 @@ a {
     text-decoration: none;
     text-transform: uppercase;
     color: black;
-    font-size: 16px;
+    font-size: 12px;
     transition: all 250ms;
 }
 
@@ -42,10 +47,42 @@ li:hover a {
     font-weight: bold;
 }
 
-.space {
+.title {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 200px;
+    height: 50px;
+    font-size: 24px;
+    font-weight: bold;
+    background-color: var(--accent);
+}
+
+.topics {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+}
+
+.topics li {
+    padding: 12px 18px;
+}
+
+.topics a {
+    font-size: 10px;
+}
+
+.sign-in {
+    margin-right: 20px;
+    padding: 4px 16px;
+    border: 1px solid black;
+    border-radius: 4px;
+    font-size: 12px;
+    font-family: 'Montserrat', sans-serif !important;
+    font-weight: bold;
+}
+
+.sign-in:hover {
+    cursor: pointer;
+    text-decoration: underline;
 }
