--- a/src/app/trending/trending.component.css
+++ b/src/app/trending/trending.component.css
@@ -14,53 +14,75 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    width: 80%;
-    gap: 50px;
+    width: 90%;
+    gap: 25px;
     margin-top: 50px;
 }
 
 .blog {
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 275px;
+    border: 2px solid #dfdfdf;
+    transition: all 250ms;
+}
+
+.blog:hover {
+    cursor: pointer;
+    box-shadow: 0 0 10px 8px #dfdfdf;
 }
 
 .blog-img {
-    width: 100%;
+    height: 40%;
     object-fit: cover;
-}
-
-.blog-content {
-    display: flex;
-    flex-direction: column;
-    padding: 20px 10px 0;
-    height: 300px;
-}
-
-p {
-    margin: 0;
-}
-
-button {
-    width: 50%;
-    margin: auto auto 25px;
 }
 
 .profile {
     display: flex;
     align-items: center;
     gap: 15px;
+    font-size: 14px;
+}
+
+.profile h4 {
+    margin: 0;
 }
 
 .icon {
-    width: 50px;
-    height: 50px;
+    width: 32px;
+    height: 32px;
     object-fit: cover;
     border-radius: 100%;
 }
 
-hr {
-    border: 2px solid #d8d8d8;
-    width: 100%;
+.blog-content {
+    display: flex;
+    flex-direction: column;
+    padding: 10px 10px 0;
+    height: 200px;
+}
+
+.blog-content p {
     margin: 0;
+    font-size: 12px;
+}
+
+button {
+    margin: auto auto 25px;
+}
+
+.blog-meta {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: auto;
+    padding: 0 12px;
+}
+
+.blog-meta p {
+    font-size: 10px;
+}
+
+.bx-heart {
+    color: #ff0077;
 }
