--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@ html {
 }
 
 :root {
-    --accent-blue: #008cff;
+    --accent: #ffd398;
 }
 
 body {
@@ -13,21 +13,20 @@ body {
     margin: 0;
 }
 
-button {
-    border: 3px solid var(--accent-blue);
+.pri-btn {
+    border: 2px solid var(--accent);
     border-radius: 16px;
     text-transform: uppercase;
-    padding: 10px 28px;
+    padding: 8px 28px;
     font-family: 'Montserrat', sans-serif !important;
     font-weight: bold;
-    font-size: 16px;
-    background-color: var(--accent-blue);
-    color: white;
+    font-size: 12px;
+    background-color: var(--accent);
+    color: black;
     transition: all 250ms;
 }
 
-button:hover {
+.pri-btn:hover {
     cursor: pointer;
     background-color: white;
-    color: var(--accent-blue);
 }
