Component cleanup for redesign

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,21 +2,28 @@
     <nav>
         <ul>
             <li routerLink="" routerLinkActive="active"><a>Home</a></li>
-            <li routerLink="trending" routerLinkActive="active"><a>Trending</a></li>
-            <li routerLink="profile" routerLinkActive="active"><a>Profile</a></li>
+            <li routerLink="" routerLinkActive="active"><a>News</a></li>
+            <li routerLink="" routerLinkActive="active"><a>Membership</a></li>
+            <li routerLink="" routerLinkActive="active"><a>Contact</a></li>
         </ul>
     </nav>
-    <div class="title">BLOG</div>
     <div class="topics">
         <ul>
             <li><a href="">Travel</a></li>
             <li><a href="">Photography</a></li>
             <li><a href="">Lifestyle</a></li>
             <li><a href="">Technology</a></li>
-            <li><a href="">Design</a></li>
+            <li><a href="">Fitness</a></li>
             <li><a href="">Science</a></li>
             <li><a href="">Fashion</a></li>
         </ul>
-        <a routerLink="sign-in"><button class="sign-in">Sign In</button></a>
+        <div class="buttons">
+            <a routerLink=""><button class="sign-btn">Sign In</button></a>
+            <a routerLink=""><button class="sign-btn sign-up">Sign Up</button></a>
+        </div>
+    </div>
+    <div class="search">
+        <i class='bx bx-search-alt'></i>
+        <input type="text" class="search-box" placeholder="Search...">
     </div>
 </header>
