--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,6 +1,7 @@
 header {
     display: flex;
     flex-direction: column;
+    background-color: var(--main);
 }
 
 nav {
@@ -33,7 +34,7 @@ li {
 a {
     text-decoration: none;
     text-transform: uppercase;
-    color: black;
+    color: var(--text);
     font-size: 12px;
     transition: all 250ms;
 }
@@ -45,16 +46,7 @@ li:hover {
 li:hover a {
     text-decoration: underline;
     font-weight: bold;
-}
-
-.title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    font-size: 24px;
-    font-weight: bold;
-    background-color: var(--accent);
+    color: white;
 }
 
 .topics {
@@ -70,19 +62,58 @@ li:hover a {
 
 .topics a {
     font-size: 10px;
+    color: var(--text);
 }
 
-.sign-in {
+.sign-btn {
     margin-right: 20px;
     padding: 4px 16px;
-    border: 1px solid black;
-    border-radius: 4px;
+    border: none;
     font-size: 12px;
     font-family: 'Montserrat', sans-serif !important;
+    color: var(--text);
+    background-color: var(--main);
+    transition: all 250ms;
+}
+
+.sign-btn:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    color: white;
+}
+
+.sign-up {
+    border: 2px solid var(--accent);
+}
+
+.search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    font-size: 24px;
     font-weight: bold;
 }
 
-.sign-in:hover {
-    cursor: pointer;
-    text-decoration: underline;
+.search-box {
+    width: 90%;
+    max-width: 450px;
+    padding-left: 28px;
+    font-size: 14px;
+    line-height: 25px;
+    color: var(--text);
+    border: 2px solid var(--text);
+    border-radius: 4px;
+    background-color: var(--main);
+    outline: none;
+    font-family: 'Montserrat', sans-serif !important;
+}
+
+.bx-search-alt {
+    position: relative;
+    height: 18px;
+    width: 18px;
+    font-size: 18px;
+    left: 24px;
+    color: var(--text);
 }
