Home page header

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,79 @@
-<p>home works!</p>
+<div class="header">
+    <div class="section main-blog">
+        <div class="blog">
+            <img src="assets/blog-cover-1.jpg" alt="">
+            <div class="blog-info">
+                <p>Dec 5th 2021</p>
+                <h4>Sample Title</h4>
+            </div>
+            <div class="blog-topic">
+                <p>Travel</p>
+            </div>
+        </div>
+    </div>
+    <div class="section sub-blogs">
+        <div class="blog">
+            <img src="assets/blog-cover-2.jpg" alt="">
+            <div class="blog-info">
+                <p>Dec 5th 2021</p>
+                <h4>Sample Title</h4>
+            </div>
+            <div class="blog-topic">
+                <p>Technology</p>
+            </div>
+        </div>
+        <div class="blog">
+            <img src="assets/blog-cover-3.jpg" alt="">
+            <div class="blog-info">
+                <p>Dec 5th 2021</p>
+                <h4>Sample Title</h4>
+            </div>
+            <div class="blog-topic">
+                <p>Fashion</p>
+            </div>
+        </div>
+    </div>
+    <div class="section trending">
+        <h3>Trending Blogs</h3>
+        <div class="trending-blog">
+            <img src="assets/blog-cover-3.jpg" alt="">
+            <div class="trending-blog-info">
+                <p>Dec 5th 2021</p>
+                <h5>Sample Title</h5>
+            </div>
+        </div>
+        <hr>
+        <div class="trending-blog">
+            <img src="assets/blog-cover-3.jpg" alt="">
+            <div class="trending-blog-info">
+                <p>Dec 5th 2021</p>
+                <h5>Sample Title</h5>
+            </div>
+        </div>
+        <hr>
+        <div class="trending-blog">
+            <img src="assets/blog-cover-3.jpg" alt="">
+            <div class="trending-blog-info">
+                <p>Dec 5th 2021</p>
+                <h5>Sample Title</h5>
+            </div>
+        </div>
+        <hr>
+        <div class="trending-blog">
+            <img src="assets/blog-cover-3.jpg" alt="">
+            <div class="trending-blog-info">
+                <p>Dec 5th 2021</p>
+                <h5>Sample Title</h5>
+            </div>
+        </div>
+        <hr>
+        <div class="trending-blog">
+            <img src="assets/blog-cover-3.jpg" alt="">
+            <div class="trending-blog-info">
+                <p>Dec 5th 2021</p>
+                <h5>Sample Title</h5>
+            </div>
+        </div>
+        <hr>
+    </div>
+</div>
