--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@ html {
     --accent: #368ada;
     --main: #1d222c;
     --main-dark: #151820;
+    --main-light: #252b36;
     --text: #949eb3;
 }
 
