Added new components and home content
+ Footer component
+ Blog component
+ Membership component
+ Contact component

Added new blog cover images and added some new content on the home page.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,79 +1,175 @@
-<div class="header">
-    <div class="section main-blog">
-        <div class="blog">
-            <img src="assets/blog-cover-1.jpg" alt="">
-            <div class="blog-info">
-                <p>Dec 5th 2021</p>
-                <h4>Sample Title</h4>
+<div class="main">
+    <div class="section col">
+        <div class="main-blog">
+            <div class="blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-1.jpg" alt="">
+                <div class="blog-info">
+                    <p>Jun 12th 2023</p>
+                    <h4>Why you should be a solo traveller in 2023</h4>
+                </div>
+                <div class="blog-topic">
+                    <p>Travel</p>
+                </div>
             </div>
-            <div class="blog-topic">
-                <p>Travel</p>
+        </div>
+        <div class="sub-blogs">
+            <div class="blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-2.jpg" alt="">
+                <div class="blog-info">
+                    <p>May 3rd 2023</p>
+                    <h4>Is AI the future of the workforce?</h4>
+                </div>
+                <div class="blog-topic">
+                    <p>Technology</p>
+                </div>
+            </div>
+            <div class="blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-3.jpg" alt="">
+                <div class="blog-info">
+                    <p>Oct 17th 2023</p>
+                    <h4>Melbourne Fashion Week 2023</h4>
+                </div>
+                <div class="blog-topic">
+                    <p>Fashion</p>
+                </div>
+            </div>
+        </div>
+        <div class="trending">
+            <h3>Trending Blogs</h3>
+            <div class="trending-blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-4.jpg" alt="">
+                <div class="trending-blog-info">
+                    <p>May 5th 2023</p>
+                    <h5>Sample Title</h5>
+                </div>
+            </div>
+            <hr>
+            <div class="trending-blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-5.jpg" alt="">
+                <div class="trending-blog-info">
+                    <p>Jun 21st 2023</p>
+                    <h5>Sample Title</h5>
+                </div>
+            </div>
+            <hr>
+            <div class="trending-blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-6.jpg" alt="">
+                <div class="trending-blog-info">
+                    <p>Feb 19th 2023</p>
+                    <h5>Sample Title</h5>
+                </div>
+            </div>
+            <hr>
+            <div class="trending-blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-7.jpg" alt="">
+                <div class="trending-blog-info">
+                    <p>Mar 5th 2023</p>
+                    <h5>Sample Title</h5>
+                </div>
+            </div>
+            <hr>
+            <div class="trending-blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-8.jpg" alt="">
+                <div class="trending-blog-info">
+                    <p>Mar 14th 2023</p>
+                    <h5>Sample Title</h5>
+                </div>
+            </div>
+            <hr>
+            <div class="trending-blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-9.jpg" alt="">
+                <div class="trending-blog-info">
+                    <p>Apr 7th 2023</p>
+                    <h5>Sample Title</h5>
+                </div>
+            </div>
+            <hr>
+            <div class="trending-blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-10.jpg" alt="">
+                <div class="trending-blog-info">
+                    <p>Jun 5th 2023</p>
+                    <h5>Sample Title</h5>
+                </div>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="section">
+        <div class="popular">
+            <div class="heading">
+                <h3>Popular</h3>
+            </div>
+            <div class="popular-blogs">
+                <div class="blog" routerLink="/blog" routerLinkActive="active">
+                    <img src="assets/blog-cover-7.jpg" alt="">
+                    <div class="blog-info">
+                        <p>Oct 17th 2023</p>
+                        <h4>Sample Title</h4>
+                    </div>
+                    <div class="blog-topic">
+                        <p>Topic</p>
+                    </div>
+                </div>
+                <div class="blog" routerLink="/blog" routerLinkActive="active">
+                    <img src="assets/blog-cover-7.jpg" alt="">
+                    <div class="blog-info">
+                        <p>Oct 17th 2023</p>
+                        <h4>Sample Title</h4>
+                    </div>
+                    <div class="blog-topic">
+                        <p>Topic</p>
+                    </div>
+                </div>
+                <div class="blog" routerLink="/blog" routerLinkActive="active">
+                    <img src="assets/blog-cover-7.jpg" alt="">
+                    <div class="blog-info">
+                        <p>Oct 17th 2023</p>
+                        <h4>Sample Title</h4>
+                    </div>
+                    <div class="blog-topic">
+                        <p>Topic</p>
+                    </div>
+                </div>
+                <div class="blog" routerLink="/blog" routerLinkActive="active">
+                    <img src="assets/blog-cover-7.jpg" alt="">
+                    <div class="blog-info">
+                        <p>Oct 17th 2023</p>
+                        <h4>Sample Title</h4>
+                    </div>
+                    <div class="blog-topic">
+                        <p>Topic</p>
+                    </div>
+                </div>
+                <div class="blog" routerLink="/blog" routerLinkActive="active">
+                    <img src="assets/blog-cover-7.jpg" alt="">
+                    <div class="blog-info">
+                        <p>Oct 17th 2023</p>
+                        <h4>Sample Title</h4>
+                    </div>
+                    <div class="blog-topic">
+                        <p>Topic</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="section sub-blogs">
-        <div class="blog">
-            <img src="assets/blog-cover-2.jpg" alt="">
-            <div class="blog-info">
-                <p>Dec 5th 2021</p>
-                <h4>Sample Title</h4>
+    <div class="section">
+        <div class="explore">
+            <div class="heading">
+                <h3>Explore</h3>
             </div>
-            <div class="blog-topic">
-                <p>Technology</p>
-            </div>
-        </div>
-        <div class="blog">
-            <img src="assets/blog-cover-3.jpg" alt="">
-            <div class="blog-info">
-                <p>Dec 5th 2021</p>
-                <h4>Sample Title</h4>
-            </div>
-            <div class="blog-topic">
-                <p>Fashion</p>
+            <div class="explore-topics">
+                <h4>Travel</h4>
+                <h4>Photography</h4>
+                <h4>Lifestyle</h4>
+                <h4>Technology</h4>
+                <h4>Fitness</h4>
+                <h4>Science</h4>
+                <h4>Fashion</h4>
+                <h4>Education</h4>
+                <h4>Nature</h4>
+                <h4>Art</h4>
             </div>
         </div>
-    </div>
-    <div class="section trending">
-        <h3>Trending Blogs</h3>
-        <div class="trending-blog">
-            <img src="assets/blog-cover-3.jpg" alt="">
-            <div class="trending-blog-info">
-                <p>Dec 5th 2021</p>
-                <h5>Sample Title</h5>
-            </div>
-        </div>
-        <hr>
-        <div class="trending-blog">
-            <img src="assets/blog-cover-3.jpg" alt="">
-            <div class="trending-blog-info">
-                <p>Dec 5th 2021</p>
-                <h5>Sample Title</h5>
-            </div>
-        </div>
-        <hr>
-        <div class="trending-blog">
-            <img src="assets/blog-cover-3.jpg" alt="">
-            <div class="trending-blog-info">
-                <p>Dec 5th 2021</p>
-                <h5>Sample Title</h5>
-            </div>
-        </div>
-        <hr>
-        <div class="trending-blog">
-            <img src="assets/blog-cover-3.jpg" alt="">
-            <div class="trending-blog-info">
-                <p>Dec 5th 2021</p>
-                <h5>Sample Title</h5>
-            </div>
-        </div>
-        <hr>
-        <div class="trending-blog">
-            <img src="assets/blog-cover-3.jpg" alt="">
-            <div class="trending-blog-info">
-                <p>Dec 5th 2021</p>
-                <h5>Sample Title</h5>
-            </div>
-        </div>
-        <hr>
     </div>
 </div>
