--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,46 +1,8 @@
-.header {
-    display: flex;
-    justify-content: center;
-    width: 90%;
-    max-width: 1366px;
-    margin: auto auto 50px;
-    gap: 15px;
-}
-
-.section {
-    width: 30%;
-}
-
-@media only screen and (max-width: 720px) {
-    .header {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .section {
-        width: 100%;
-    }
-}
-
-.section h3 {
+h3, h5 {
     color: white;
 }
 
-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.main-blog {
-    display: flex;
-}
-
-.sub-blogs {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
+/* Global */
 
 .blog {
     position: relative;
@@ -78,7 +40,7 @@ img {
     margin: 0;
     padding: 4px 8px;
     color: white;
-    background-color: black;
+    background-color: var(--main-dark);
     font-size: 12px;
 }
 
@@ -90,10 +52,35 @@ img {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
+hr {
+    width: 90%;
+    border: none;
+    border-top: 2px solid var(--main-light);
+}
+
+/* Main */
+
+.main-blog {
+    display: flex;
+    width: 35%;
+}
+
+/* Sub */
+
+.sub-blogs {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 35%;
+}
+
+/* Trending */
+
 .trending {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 30%;
     background-color: var(--main);
 }
 
@@ -114,12 +101,12 @@ img {
 
 .trending-blog img {
     width: 33%;
+    height: 75px;
 }
 
 .trending-blog-info h5 {
     margin: 8px 8px 8px 24px;
-    color: white;
-    transition: all 500ms;
+    transition: all 250ms;
 }
 
 .trending-blog-info p {
@@ -128,8 +115,61 @@ img {
     color: var(--text);
 }
 
-hr {
-    width: 90%;
-    border: none;
-    border-top: 2px solid var(--main-light);
+/* Popular */
+
+.heading {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.popular-blogs {
+    display: flex;
+    gap: 15px;
+    width: 100%;
+    height: 250px;
+}
+
+/* Explore */
+
+.explore-topics {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.explore-topics h4 {
+    margin: 15px 30px;
+    padding: 8px 16px;
+    background-color: var(--main);
+    border-radius: 1rem;
+    transition: all 250ms;
+}
+
+.explore-topics h4:hover {
+    cursor: pointer;
+    background-color: var(--main-light);
+    color: white;
+}
+
+/* Responsive */
+
+@media only screen and (max-width: 720px) {
+    .main-blog,
+    .sub-blogs,
+    .trending {
+        width: 100%;
+    }
+
+    .sub-blogs {
+        flex-direction: row;
+    }
+
+    .blog {
+        height: auto;
+    }
+
+    .trending-blog img {
+        width: 33%;
+        height: 125px;
+    }
 }
