--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -8,7 +8,7 @@ nav {
     justify-content: center;
     align-items: center;
     height: 50px;
-    width: 100vw;
+    width: 100%;
     background-color: var(--main);
 }
 
@@ -49,7 +49,7 @@ li:hover a {
     color: white;
 }
 
-.topics {
+.subnav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -90,6 +90,7 @@ li:hover a {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     height: 50px;
     font-size: 24px;
     font-weight: bold;
@@ -97,24 +98,45 @@ li:hover a {
     background-color: var(--main);
 }
 
+.search-elems {
+    position: relative;
+    width: 450px;
+    height: 70%;
+}
+
 .search-box {
-    width: 90%;
-    max-width: 450px;
-    padding-left: 28px;
-    font-size: 14px;
-    line-height: 25px;
-    color: var(--text);
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    padding: 0 32px;
     border: 2px solid var(--text);
     border-radius: 4px;
     background-color: var(--main);
     outline: none;
     font-family: 'Montserrat', sans-serif !important;
+    font-size: 14px;
+    color: var(--text);
 }
 
 .bx-search-alt {
-    position: relative;
+    position: absolute;
+    top: 8px;
+    left: 8px;
     height: 18px;
     width: 18px;
     font-size: 18px;
-    left: 24px;
+}
+
+@media only screen and (max-width: 720px) {
+    .topics {
+        display: none;
+    }
+
+    .buttons {
+        margin-left: auto;
+    }
+
+    .search-elems {
+        width: 75%;
+    }
 }
