--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,13 @@
 <header>
     <nav>
         <ul>
-            <li routerLink="" routerLinkActive="active"><a>Home</a></li>
-            <li routerLink="" routerLinkActive="active"><a>News</a></li>
-            <li routerLink="" routerLinkActive="active"><a>Membership</a></li>
-            <li routerLink="" routerLinkActive="active"><a>Contact</a></li>
+            <li routerLink="home" routerLinkActive="active"><a>Home</a></li>
+            <li routerLink="membership" routerLinkActive="active"><a>Membership</a></li>
+            <li routerLink="contact" routerLinkActive="active"><a>Contact</a></li>
         </ul>
     </nav>
-    <div class="topics">
-        <ul>
+    <div class="subnav">
+        <ul class="topics">
             <li><a href="">Travel</a></li>
             <li><a href="">Photography</a></li>
             <li><a href="">Lifestyle</a></li>
@@ -18,12 +17,14 @@
             <li><a href="">Fashion</a></li>
         </ul>
         <div class="buttons">
-            <a routerLink=""><button class="sign-btn">Sign In</button></a>
-            <a routerLink=""><button class="sign-btn sign-up">Sign Up</button></a>
+            <a routerLink="" routerLinkActive="active"><button class="sign-btn">Sign In</button></a>
+            <a routerLink="" routerLinkActive="active"><button class="sign-btn sign-up">Sign Up</button></a>
         </div>
     </div>
     <div class="search">
-        <i class='bx bx-search-alt'></i>
-        <input type="text" class="search-box" placeholder="Search...">
+        <div class="search-elems">
+            <i class='bx bx-search-alt'></i>
+            <input type="text" class="search-box" placeholder="Search...">
+        </div>
     </div>
 </header>
