--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,7 +35,9 @@
             </div>
         </div>
         <div class="trending">
-            <h3>Trending Blogs</h3>
+            <div class="heading">
+                <h3>Trending</h3>
+            </div>
             <div class="trending-blog" routerLink="/blog" routerLinkActive="active">
                 <img src="assets/blog-cover-4.jpg" alt="">
                 <div class="trending-blog-info">
@@ -94,82 +96,88 @@
             <hr>
         </div>
     </div>
-    <div class="section">
-        <div class="popular">
-            <div class="heading">
-                <h3>Popular</h3>
+    <div class="section sub-section">
+        <div class="heading">
+            <h3>Popular</h3>
+        </div>
+        <div class="popular-blogs">
+            <div class="popular-blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-7.jpg" alt="">
+                <div class="blog-info">
+                    <p>Oct 17th 2023</p>
+                    <h4>Sample Title</h4>
+                </div>
+                <div class="blog-topic">
+                    <p>Topic</p>
+                </div>
             </div>
-            <div class="popular-blogs">
-                <div class="blog" routerLink="/blog" routerLinkActive="active">
-                    <img src="assets/blog-cover-7.jpg" alt="">
-                    <div class="blog-info">
-                        <p>Oct 17th 2023</p>
-                        <h4>Sample Title</h4>
-                    </div>
-                    <div class="blog-topic">
-                        <p>Topic</p>
-                    </div>
+            <div class="popular-blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-7.jpg" alt="">
+                <div class="blog-info">
+                    <p>Oct 17th 2023</p>
+                    <h4>Sample Title</h4>
                 </div>
-                <div class="blog" routerLink="/blog" routerLinkActive="active">
-                    <img src="assets/blog-cover-7.jpg" alt="">
-                    <div class="blog-info">
-                        <p>Oct 17th 2023</p>
-                        <h4>Sample Title</h4>
-                    </div>
-                    <div class="blog-topic">
-                        <p>Topic</p>
-                    </div>
+                <div class="blog-topic">
+                    <p>Topic</p>
                 </div>
-                <div class="blog" routerLink="/blog" routerLinkActive="active">
-                    <img src="assets/blog-cover-7.jpg" alt="">
-                    <div class="blog-info">
-                        <p>Oct 17th 2023</p>
-                        <h4>Sample Title</h4>
-                    </div>
-                    <div class="blog-topic">
-                        <p>Topic</p>
-                    </div>
+            </div>
+            <div class="popular-blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-7.jpg" alt="">
+                <div class="blog-info">
+                    <p>Oct 17th 2023</p>
+                    <h4>Sample Title</h4>
                 </div>
-                <div class="blog" routerLink="/blog" routerLinkActive="active">
-                    <img src="assets/blog-cover-7.jpg" alt="">
-                    <div class="blog-info">
-                        <p>Oct 17th 2023</p>
-                        <h4>Sample Title</h4>
-                    </div>
-                    <div class="blog-topic">
-                        <p>Topic</p>
-                    </div>
+                <div class="blog-topic">
+                    <p>Topic</p>
                 </div>
-                <div class="blog" routerLink="/blog" routerLinkActive="active">
-                    <img src="assets/blog-cover-7.jpg" alt="">
-                    <div class="blog-info">
-                        <p>Oct 17th 2023</p>
-                        <h4>Sample Title</h4>
-                    </div>
-                    <div class="blog-topic">
-                        <p>Topic</p>
-                    </div>
+            </div>
+            <div class="popular-blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-7.jpg" alt="">
+                <div class="blog-info">
+                    <p>Oct 17th 2023</p>
+                    <h4>Sample Title</h4>
+                </div>
+                <div class="blog-topic">
+                    <p>Topic</p>
+                </div>
+            </div>
+            <div class="popular-blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-7.jpg" alt="">
+                <div class="blog-info">
+                    <p>Oct 17th 2023</p>
+                    <h4>Sample Title</h4>
+                </div>
+                <div class="blog-topic">
+                    <p>Topic</p>
+                </div>
+            </div>
+            <div class="popular-blog" routerLink="/blog" routerLinkActive="active">
+                <img src="assets/blog-cover-7.jpg" alt="">
+                <div class="blog-info">
+                    <p>Oct 17th 2023</p>
+                    <h4>Sample Title</h4>
+                </div>
+                <div class="blog-topic">
+                    <p>Topic</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="section">
-        <div class="explore">
-            <div class="heading">
-                <h3>Explore</h3>
-            </div>
-            <div class="explore-topics">
-                <h4>Travel</h4>
-                <h4>Photography</h4>
-                <h4>Lifestyle</h4>
-                <h4>Technology</h4>
-                <h4>Fitness</h4>
-                <h4>Science</h4>
-                <h4>Fashion</h4>
-                <h4>Education</h4>
-                <h4>Nature</h4>
-                <h4>Art</h4>
-            </div>
+    <div class="section sub-section">
+        <div class="heading">
+            <h3>Explore</h3>
+        </div>
+        <div class="explore-topics">
+            <h4>Travel</h4>
+            <h4>Photography</h4>
+            <h4>Lifestyle</h4>
+            <h4>Technology</h4>
+            <h4>Fitness</h4>
+            <h4>Science</h4>
+            <h4>Fashion</h4>
+            <h4>Education</h4>
+            <h4>Nature</h4>
+            <h4>Art</h4>
         </div>
     </div>
 </div>
